<resources>
    <string name="app_name">VFace</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="subscription_key"></string>
    <string name="endpoint">https://vface2.cognitiveservices.azure.com/face/v1.0</string>
    <string name="add_subscription_key_tip_title">Subscription Key is Needed</string>
    <string name="add_subscription_key_tip">Please put your subscription key with its corresponding endpoint to source file \"app/res/values/strings.xml\" to enable Face API calls.</string>


    <!-- Courses management activities -->
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="extended_fab_content_desc">ADD A COURSE</string>
    <string name="extended_fab_label">Add course</string>

    <string name="course_available">Courses manager</string>
    <string name="courses_tip">Long tap on a course to open actions menu.</string>
    <string name="add_courses">ADD COURSE</string>

    <!-- Add Edit Course activities -->
    <string name="Information">Add a course you are teaching to manage the students.</string>
    <string name="title">Course profile</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="add_students">ADD STUDENT</string>
    <string name="courseId">COURSE ID</string>
    <string name="courseName">COURSE NAME</string>
    <string name="descriptionBack">Going Back</string>

    <!-- Courses Student Menu activities -->
    <string name="menuAddCourse">COURSES MANAGER</string>
    <string name="menuAddStudent">STUDENTS MANAGER</string>
    <string name="descriptionCourseStudentBack">Going Back</string>

    <!-- Students management activities -->
    <string name="students_available">Students managers</string>
    <string name="title_student_profile">Student settings</string>
    <string name="hint_student_id">STUDENT ID</string>
    <string name="hint_student_name">STUDENT</string>
    <string name="btn_add_face">ADD FACE</string>
    <string name="btn_save">SAVE</string>

    <!-- Warning Message -->
    <string name="user_provided_person_group_name">Course name</string>
    <string name="user_provided_person_group_description_data">User data</string>
    <string name="user_provided_person_name">Student name</string>
    <string name="user_provided_description_data">User data</string>

    <!-- Dashboard -->
    <string name="titleDashboard">MY DASHBOARD</string>
    <string name="sloganDashboard">Welcome to VFace!</string>
    <string name="groupCheck">Group-check</string>
    <string name="selfCheck">Self-check</string>
    <string name="attendance">Attendance</string>
    <string name="studentCourse">Data Managers</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>

    <!-- Group check -->
    <string name="titleGroupCheck">Group-check</string>
    <string name="hintChooseCourse">CHOOSE A COURSE</string>
    <string name="hintChooseList">LIST OF STUDENTS</string>
    <string name="takePhoto">TAKE A PHOTO</string>
    <string name="pickImage">FROM GALLERY</string>
    <string name="title_activity_group_check_with_navigation">GroupCheckWithNavigation</string>
    <string name="title_homeCheck">GROUP CHECK</string>

    <string name="title_inclass">IN-CLASS</string>
    <string name="title_absent">ABSENT</string>
    <string name="title_unknown">UNKNOWN</string>

    <!-- Attendance -->
    <string name="title_attendance">Attendance manager</string>
    <string name="title_date">DATE OF CLASS</string>
    <string name="icon_description">Pick Date</string>

    <!-- About us -->
    <string name="title_about">About us</string>
    <string name="title_about_app">About App</string>
    <string name="content_about_app">Version 1.0.0</string>
    <string name="content_about_app_link">www.facebook.com/vu.nguyen7797</string>
    <string name="content_email">vu.nguyen7797@gmail.com</string>
    <string name="content_copyright">Created and developed by VU NGUYEN</string>
    <string name="content_about_creator">About VU NGUYEN</string>
    <string name="content_creator_name">VU DUC ANH NGUYEN \nVIET NAM \nJunior, Computer Science,\nArkansas State University</string>
    <string name="content_creator_phone">Phone:</string>
    <string name="content_creator_number">+1 (870) 273–8590</string>
    <string name="title_email">Email:</string>

    <!-- About us -->
    <string name="title_setting">Settings</string>
    <string name="logOut">Log out</string>

    <!-- Manage Account -->
    <string name="title_manage_account">Manage Account</string>
    <string name="hint_change_profile">Change profile picture</string>
    <string name="hint_enter_display_name">Your name</string>

    <string name="action_crop">Crop</string>
    <string name="title_crop">Crop Image</string>
    <string name="profile_updated">Profile updated</string>
    <string name="attendance_waiting">attendance_waiting</string>
    <string name="course_waiting">course_waiting</string>
    <string name="group_check_icon">group_check_icon</string>
    <string name="self_check_icon">Self check icon</string>
    <string name="attendance_icon">Attendance icon</string>
    <string name="data_manager_icon">Data manager icon</string>
    <string name="setting_icon">Setting icon</string>
    <string name="about_icon">About icon</string>
    <string name="class_view_waiting">Class view waiting</string>
    <string name="list_check_waiting">List check waiting</string>
    <string name="go_back_button">Go Back button</string>
    <string name="face_frame">Face frame</string>
    <string name="course_manager_icon">Course manager icon</string>
    <string name="student_manager_icon">Student manager icon</string>
    <string name="student_list_waiting">Student list waiting</string>
    <string name="logoflash">logoFlash</string>
    <string name="face_icon">face_icon</string>
    <string name="password">Password</string>
    <string name="title_have_account">You have an account? Login here</string>>
    <string name="please_sign_in">Please sign in</string>
    <string name="login">Login</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="register">Register.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="put_your_face_in_the_frame">Put your face in the frame</string>
    <string name="we_will_send_you_the_reset_link_to_your_email_please_enter_your_email">We will send you the reset link to your email. Please enter your email.</string>
    <string name="hello_there">Hello there!</string>
    <string name="sign_up_your_account">Sign up your account</string>
    <string name="sign_up">Sign up</string>
    <string name="title_self_check">Self-check</string>
    <string name="btn_face_checkin">Face check-in</string>
    <string name="general_settings">General settings</string>
    <string name="languages">Languages</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="linglin_niki_liu">LINGLIN (NIKI) LIU \nCHINA \nMaster of Science, Mathematics,\nArkansas State University</string>
    <string name="btn_send">SEND</string>
    <string name="email_address">Email Address</string>
    <string name="please_log_in_toast">Please Log in</string>
    <string name="want_exit_dialog">Do you want to exit?</string>
    <string name="yes_btn">YES</string>
    <string name="no_btn">NO</string>
    <string name="menu_view_course">View Course Information</string>;
    <string name="menu_add_course">Add Course</string>
    <string name="menu_edit_course">Edit Course</string>
    <string name="menu_delete_course">Delete Course</string>
    <string name="menu_view_student">View Student Information</string>;
    <string name="menu_add_student">Add Student</string>
    <string name="menu_edit_student">Edit Student</string>
    <string name="menu_delete_student">Delete Student</string>
    <string name="please_save_data_toast">Please save data</string>
    <string name="menu_delete_face">Delete Face</string>
    <string name="title_student_profile_2">Student profile</string>
    <string name="hint_total_absences">OVERALL ATTENDANCE</string>
    <string name="title_absence_history">ABSENCE HISTORY</string>
    <string name="hint_course_name">COURSE</string>
</resources>
