<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vunguyen.vface.ui.AboutActivity"
    android:background="#242424"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="start|center"
            android:onClick="btnBackClick"
            android:src="@drawable/back_button"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/descriptionBack" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/title_about"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_marginEnd="50dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_about_app"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_about_app"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_about_app_link"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_email"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_copyright"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_about_creator"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_creator_name"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_creator_phone"
        android:textColor="@color/white"
        android:layout_marginStart="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_creator_number"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_email"
            android:textColor="@color/white"
            android:layout_marginStart="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_email"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="10dp"/>
    </LinearLayout>






</LinearLayout>
