<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vunguyen.vface.ui.CropImageActivity"
    android:orientation="vertical"
    android:background="@color/backgroundPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="start|center"
            android:onClick="btnBackArrow"
            android:src="@drawable/back_button"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/descriptionBack" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/title_crop"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_marginEnd="50dp"/>
    </LinearLayout>

    <com.theartofdev.edmodo.cropper.CropImageView
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="500dp"
        android:background="@color/backgroundPrimary"
        android:id="@+id/ivCrop"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/action_crop"
        android:layout_gravity="center"
        android:onClick="btnCrop"/>

</LinearLayout>
