<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vunguyen.vface.ui.ManageAccountActivity"
    android:background="@color/backgroundPrimary"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="start|center"
            android:onClick="btnBackClick"
            android:src="@drawable/back_button"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/descriptionBack" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/title_manage_account"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_marginEnd="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <com.comix.rounded.RoundedCornerImageView
            android:id="@+id/ivProfilePhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:onClick="btnPickImage"
            android:layout_gravity="center"
            android:src="@drawable/vlogorectnew1"
            app:cornerRadius="10dp"
            app:cornerColor="@color/backgroundPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_change_profile"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlineAccountName"
        style="@style/MyTextInputLayout2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/hint_enter_display_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="btnUpdateProfile"
        android:text="@string/done"/>

</LinearLayout>
