<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vunguyen.vface.ui.GeneralSettingActivity"
    android:background="@color/backgroundPrimary"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="start|center"
            android:onClick="btnBackClick"
            android:src="@drawable/back_button"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/descriptionBack" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/general_settings"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_marginEnd="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_language_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/languages"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/MyTextInputLayout"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textAlignment="center">

            <AutoCompleteTextView
                android:id="@+id/filled_exposed_dropdown_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/choose_a_language"
                android:textStyle="bold"
                android:textColor="#ffffff" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>
